Updated hability to download log for debuggin
